<resources xmlns:tools="http://schemas.android.com/tools">
    <!--<string name="app_name">PedometerSample</string>-->
    <string name="app_copyright">&#169;PedometerSample/kasa_le</string>

    <string name="label_step">歩</string>
    <string name="label_step_count">歩数</string>
    <string name="hint_edit_step">歩数を入力</string>
    <string name="resist">登録</string>
    <string name="update">更新</string>
    <string name="delete">削除</string>
    <string name="menu_label_add_record">記録を追加</string>
    <string name="menu_label_share_sns">共有</string>
    <string name="label_log_prefix">この日は</string>
    <string name="label_log_suffix">歩 歩きました</string>

    <string name="title_activity_log_item">今日は何歩歩いた？</string>
    <string name="title_activity_sign_in">サインイン</string>
    <string name="title_activity_sign_out">サインアウト</string>
    <string name="label_yes">はい</string>
    <string name="label_no">いいえ</string>

    <string name="level_normal">普通</string>
    <string name="level_good">頑張った</string>
    <string name="level_bad">悪い</string>
    <string name="label_date">日付</string>
    <string name="label_select_date">日付を選ぶ</string>
    <string name="label_level">気分</string>
    <string name="label_weather">天気</string>
    <string name="error">エラー</string>
    <string name="close">閉じる</string>
    <string name="error_validation_future_date">未来の日付はダメです</string>
    <string name="error_validation_empty_count">0歩はないでしょ</string>

    <string name="confirm">確認</string>
    <string name="message_delete_confirm">削除する？</string>
    <string name="title_activity_twitter_share">Twitterにシェア</string>
    <string name="share_sns">SNSで共有</string>
    <string name="label_twitter">Twitter</string>
    <string name="label_instagram">Instagram</string>
    <string name="title_activity_instagram_share">Instagramにシェア</string>
    <string name="label_tweet">ツイートする</string>
    <string name="error_no_twitter_app">Twitter公式アプリが見つかりません</string>
    <string name="label_post">投稿する</string>
    <string name="error_no_instagram_app">Instagramアプリが見つかりません</string>
    <string name="install">インストール</string>

    <string name="market_url" tools:ignore="ExtraTranslation">http://play.google.com/store/apps/details?id=%1$s</string>

    <string name="year_month_label">%1$s年 %2$d月</string>

    <string name="sunday">日</string>
    <string name="monday">月</string>
    <string name="tuesday">火</string>
    <string name="wednesday">水</string>
    <string name="thursday">木</string>
    <string name="friday">金</string>
    <string name="saturday">土</string>

    <string name="facebook_application_id" translatable="false">546393189356758</string>
    <!-- Facebook Application ID, prefixed by 'fb'. Enables Chrome Custom tabs. -->
    <string name="facebook_login_protocol_scheme" translatable="false">fb546393189356758</string>

    <string name="menu_label_login">サインイン</string>
    <string name="menu_label_logout">サインアウト</string>
    <string name="label_sign_in">サインインしてクラウドに保存する</string>
    <string name="label_sign_out">サインアウトする</string>

    <string name="label_convert_to_local">ローカルデータに変更する</string>
    <string name="label_account_delete">アカウント削除</string>

    <string name="text_sign_in_description">サインインをすると、データをクラウドに保存できるようになります。\n
        クラウドに保存すると、他のデバイスとデータを自動的に同期することが出来るようになります。\n
        \n
        サインイン後、データをアップロードすることで、これまでに入力したデータをそのまま引き継ぐことが出来ます。\n
    \n
    アプリはサインインをしなくても、ローカルにデータを保存したまま、お使い頂けます。ただし、アプリをアンインストールしたりデータの削除を行うと、データを復元することは二度と出来ません。\n
       また、他のデバイスにデータを引き継ぐことも出来ません。 \n
        \n
    データを安全にバックアップし、復元するには、サインインをしてクラウドに保存することを推奨します</string>
    <string name="error_email_mismatch">メールアドレスかパスワードが間違っています</string>
    <string name="error_id_provider">認証プロバイダーでエラーが起こりました。時間をおいてもう一度お試し頂くか、認証プロバイダーにお問い合わせ下さい。</string>
    <string name="error_user_disabled">ユーザーが無効になっています</string>
    <string name="error_no_network">ネットワークに接続できませんでした。通信環境を確認の上、もう一度お試し下さい</string>
    <string name="error_service_update_canceled">必要なGooglePlayサービスの更新をユーザーがキャンセルしたため、処理を続行できません。アップデートを完了し、もう一度お試し下さい</string>
    <string name="error_unknown">認証できませんでした。繰り返しこのメッセージが表示される場合は、以下に表示されているエラーコードと共にお問い合わせ下さい</string>
    <string name="label_error_code">エラーコード = [%1$d]</string>
    <string name="text_sign_in_now">あなたはいま、サインイン中です</string>
    <string name="text_sign_out_description">サインアウトをすると、端末からデータは削除されます。その場合でも、もう一度同じアカウントでサインインすればクラウドに保存されたデータを自動的にダウンロードします。\n
    この処理には時間がかかる場合があります。\n
    \n
    アカウントの削除を行うと、クラウドに保存されたデータはすべて削除されます。\n
        削除を行う前に、データをローカルデータに変更しておくと、今後もオフラインで使用を続けることが出来ます。\n
        ローカルデータに変更を行わずにアカウントを削除すると、すべてのデータが削除され、復元が出来なくなります。</string>
    <string name="confirm_account_delete_1">データをローカルデータに変更しましたか？</string>
    <string name="confirm_account_delete_2">データをローカルデータに変更せずにアカウントを削除すると、すべてのデータが失われます。本当にこのまま削除しますか？</string>

    <string name="label_you">あなた</string>
    <string name="label_no_email">ー</string>

    <string name="user_has_pet">ペット情報リスト</string>
</resources>
