package jp.les.kasa.sample.mykotlinapp.activity.signin

import android.app.Activity
import android.app.Application
import android.app.Instrumentation
import android.content.Intent
import androidx.activity.result.ActivityResultRegistry
import androidx.activity.result.contract.ActivityResultContract
import androidx.arch.core.executor.testing.InstantTaskExecutorRule
import androidx.core.app.ActivityOptionsCompat
import androidx.test.core.app.ActivityScenario
import androidx.test.core.app.ApplicationProvider
import androidx.test.espresso.Espresso.onView
import androidx.test.espresso.action.ViewActions.click
import androidx.test.espresso.assertion.ViewAssertions.doesNotExist
import androidx.test.espresso.assertion.ViewAssertions.matches
import androidx.test.espresso.matcher.ViewMatchers
import androidx.test.espresso.matcher.ViewMatchers.*
import androidx.test.ext.junit.runners.AndroidJUnit4
import androidx.test.platform.app.InstrumentationRegistry
import com.firebase.ui.auth.ErrorCodes
import com.firebase.ui.auth.FirebaseUiException
import com.firebase.ui.auth.IdpResponse
import com.firebase.ui.auth.util.ExtraConstants
import jp.les.kasa.sample.mykotlinapp.R
import jp.les.kasa.sample.mykotlinapp.di.testMockModule
import jp.les.kasa.sample.mykotlinapp.utils.AuthProviderI
import org.assertj.core.api.Assertions.assertThat
import org.hamcrest.Matchers.endsWith
import org.hamcrest.core.StringStartsWith.startsWith
import org.junit.Before
import org.junit.Rule
import org.junit.Test
import org.junit.runner.RunWith
import org.koin.core.context.loadKoinModules
import org.koin.dsl.module
import org.koin.test.AutoCloseKoinTest
import org.koin.test.inject

@RunWith(AndroidJUnit4::class)
class SignInActivityTestI : AutoCloseKoinTest() {

    @get:Rule
    val rule = InstantTaskExecutorRule()

    private val authProvider: AuthProviderI by inject()

    private val context = ApplicationProvider.getApplicationContext<Application>()
    private fun getString(resId: Int) = context.applicationContext.getString(resId)
    private fun getString(resId: Int, c: Int) = context.applicationContext.getString(resId, c)

    class TestRegistry(private val resultCode: Int, private val errorCode: Int) :
        ActivityResultRegistry() {
        override fun <I, O> onLaunch(
            requestCode: Int,
            contract: ActivityResultContract<I, O>,
            input: I,
            options: ActivityOptionsCompat?
        ) {
            when (resultCode) {
                Activity.RESULT_CANCELED -> dispatchResult(requestCode, Activity.RESULT_CANCELED)
                Activity.RESULT_OK -> dispatchResult(requestCode, Activity.RESULT_OK, null)
                else -> {
                    val exception = FirebaseUiException(errorCode)
                    val idpResponse = IdpResponse.from(exception)
                    val resultIntent = Intent().putExtra(ExtraConstants.IDP_RESPONSE, idpResponse)
                    dispatchResult(requestCode, Activity.RESULT_CANCELED, resultIntent)
                }
            }
        }
    }

    @Before
    fun setUp() {
        loadKoinModules(testMockModule)
    }

    @Test
    fun layout() {
        ActivityScenario.launch(SignInActivity::class.java).use { scenario ->
            scenario.onActivity {
            }

            // クラウドアイコン
            onView(withId(R.id.imageCloudUpload))
//            .check(matches(withDrawable(R.drawable.ic_cloud_upload_24dp))) // Tintカラー付けていると使えない
                .check(matches(ViewMatchers.isDisplayed()))
            // 文言
            onView(withText(R.string.text_sign_in_description))
                .check(matches(ViewMatchers.isDisplayed()))
            // ログインボタン
            onView(withText(R.string.label_sign_in))
                .check(matches(ViewMatchers.isDisplayed()))
        }
    }

    @Test
    fun signIn_Launch() {
        ActivityScenario.launch(SignInActivity::class.java).use { scenario ->
            scenario.onActivity {
            }

            // ResultActivityの起動を監視
            val monitor = Instrumentation.ActivityMonitor(
                TestAuthUIActivity::class.java.canonicalName, null, false
            )
            InstrumentationRegistry.getInstrumentation().addMonitor(monitor)

            onView(withText(R.string.label_sign_in)).perform(click())

            // ResultActivityが起動したか確認
            InstrumentationRegistry.getInstrumentation().waitForMonitorWithTimeout(monitor, 1000L)
            assertThat(monitor.hits).isEqualTo(1)
        }
    }

    @Test
    fun signIn() {

        val testRegistry = TestRegistry(Activity.RESULT_OK, 0)
        // 追加のモジュール
        val scopedModule = module {
            scope<SignInActivity> {
                scoped(override = true) { testRegistry as ActivityResultRegistry }
            }
        }
        loadKoinModules(scopedModule)

        ActivityScenario.launch(SignInActivity::class.java).use { scenario ->
            scenario.onActivity {
            }

            // 認証画面を起動
            onView(withText(R.string.label_sign_in)).perform(click())

            // resultがすぐにディスパッチされている

            // エラーメッセージが表示されていないのを確認
            onView(withText(R.string.error)).check(doesNotExist())
        }
    }

    /**
     *   ログイン中の場合にサインアウト画面がでるかのテスト
     */
    @Test
    fun moveToSignOut() {
        // モックを作成
        (authProvider as TestAuthProvider).mockFirebaseUser = true
        // ResultActivityの起動を監視
        val monitor = Instrumentation.ActivityMonitor(
            SignOutActivity::class.java.canonicalName, null, false
        )
        InstrumentationRegistry.getInstrumentation().addMonitor(monitor)

        ActivityScenario.launch(SignInActivity::class.java).use { scenario ->
            scenario.onActivity {
                assertThat(it.isFinishing).isTrue()
            }
            // ResultActivityが起動したか確認
            InstrumentationRegistry.getInstrumentation().waitForMonitorWithTimeout(monitor, 1000L)
            assertThat(monitor.hits).isEqualTo(1)
        }
    }

    @Test
    fun showError_EMAIL_MISMATCH_ERROR() {
        // resultCodeはOK/CANCEL以外ならなんでもOK
        val testRegistry = TestRegistry(Activity.RESULT_FIRST_USER, ErrorCodes.EMAIL_MISMATCH_ERROR)
        // 追加のモジュールにセット
        val scopedModule = module {
            scope<SignInActivity> {
                scoped(override = true) { testRegistry as ActivityResultRegistry }
            }
        }
        loadKoinModules(scopedModule)

        ActivityScenario.launch(SignInActivity::class.java).use { scenario ->
            scenario.onActivity {
            }
            // 認証画面を起動
            onView(withText(R.string.label_sign_in)).perform(click())

            // resultがすぐにディスパッチされている

            onView(withText(startsWith(getString(R.string.error_email_mismatch))))
                .check(matches(isDisplayed()))
            onView(
                withText(
                    endsWith(
                        getString(
                            R.string.label_error_code,
                            ErrorCodes.EMAIL_MISMATCH_ERROR
                        )
                    )
                )
            )
                .check(matches(isDisplayed()))
            onView(withText(R.string.close))
                .check(matches(isDisplayed()))
                .perform(click())

            onView(withText(startsWith(getString(R.string.error_email_mismatch))))
                .check(doesNotExist())
        }
    }

    @Test
    fun showError_ERROR_GENERIC_IDP_RECOVERABLE_ERROR() {
        // resultCodeはOK/CANCEL以外ならなんでもOK
        val testRegistry =
            TestRegistry(Activity.RESULT_FIRST_USER, ErrorCodes.ERROR_GENERIC_IDP_RECOVERABLE_ERROR)
        // 追加のモジュールにセット
        val scopedModule = module {
            scope<SignInActivity> {
                scoped(override = true) { testRegistry as ActivityResultRegistry }
            }
        }
        loadKoinModules(scopedModule)

        ActivityScenario.launch(SignInActivity::class.java).use { scenario ->
            scenario.onActivity {
            }
            // 認証画面を起動
            onView(withText(R.string.label_sign_in)).perform(click())

            // resultがすぐにディスパッチされている

            onView(withText(startsWith(getString(R.string.error_id_provider))))
                .check(matches(isDisplayed()))
            onView(
                withText(
                    endsWith(
                        getString(
                            R.string.label_error_code,
                            ErrorCodes.ERROR_GENERIC_IDP_RECOVERABLE_ERROR
                        )
                    )
                )
            )
                .check(matches(isDisplayed()))
        }
    }

    @Test
    fun showError_PROVIDER_ERROR() {
        // resultCodeはOK/CANCEL以外ならなんでもOK
        val testRegistry = TestRegistry(Activity.RESULT_FIRST_USER, ErrorCodes.PROVIDER_ERROR)
        // 追加のモジュールにセット
        val scopedModule = module {
            scope<SignInActivity> {
                scoped(override = true) { testRegistry as ActivityResultRegistry }
            }
        }
        loadKoinModules(scopedModule)

        ActivityScenario.launch(SignInActivity::class.java).use { scenario ->
            scenario.onActivity {
            }
            // 認証画面を起動
            onView(withText(R.string.label_sign_in)).perform(click())

            // resultがすぐにディスパッチされている

            onView(withText(startsWith(getString(R.string.error_id_provider))))
                .check(matches(isDisplayed()))
            onView(
                withText(
                    endsWith(
                        getString(
                            R.string.label_error_code,
                            ErrorCodes.PROVIDER_ERROR
                        )
                    )
                )
            )
                .check(matches(isDisplayed()))
        }
    }

    @Test
    fun showError_ERROR_USER_DISABLED() {
        // resultCodeはOK/CANCEL以外ならなんでもOK
        val testRegistry = TestRegistry(Activity.RESULT_FIRST_USER, ErrorCodes.ERROR_USER_DISABLED)
        // 追加のモジュールにセット
        val scopedModule = module {
            scope<SignInActivity> {
                scoped(override = true) { testRegistry as ActivityResultRegistry }
            }
        }
        loadKoinModules(scopedModule)

        ActivityScenario.launch(SignInActivity::class.java).use { scenario ->
            scenario.onActivity {
            }
            // 認証画面を起動
            onView(withText(R.string.label_sign_in)).perform(click())

            // resultがすぐにディスパッチされている
            onView(withText(startsWith(getString(R.string.error_user_disabled))))
                .check(matches(isDisplayed()))
            onView(
                withText(
                    endsWith(
                        getString(
                            R.string.label_error_code,
                            ErrorCodes.ERROR_USER_DISABLED
                        )
                    )
                )
            )
                .check(matches(isDisplayed()))
        }
    }

    @Test
    fun showError_NO_NETWORK() {
        // resultCodeはOK/CANCEL以外ならなんでもOK
        val testRegistry = TestRegistry(Activity.RESULT_FIRST_USER, ErrorCodes.NO_NETWORK)
        // 追加のモジュールにセット
        val scopedModule = module {
            scope<SignInActivity> {
                scoped(override = true) { testRegistry as ActivityResultRegistry }
            }
        }
        loadKoinModules(scopedModule)

        ActivityScenario.launch(SignInActivity::class.java).use { scenario ->
            scenario.onActivity {
            }
            // 認証画面を起動
            onView(withText(R.string.label_sign_in)).perform(click())

            // resultがすぐにディスパッチされている

            onView(withText(startsWith(getString(R.string.error_no_network))))
                .check(matches(isDisplayed()))
            onView(
                withText(
                    endsWith(
                        getString(
                            R.string.label_error_code,
                            ErrorCodes.NO_NETWORK
                        )
                    )
                )
            )
                .check(matches(isDisplayed()))
        }
    }

    @Test
    fun showError_PLAY_SERVICES_UPDATE_CANCELLED() {
        // resultCodeはOK/CANCEL以外ならなんでもOK
        val testRegistry =
            TestRegistry(Activity.RESULT_FIRST_USER, ErrorCodes.PLAY_SERVICES_UPDATE_CANCELLED)
        // 追加のモジュールにセット
        val scopedModule = module {
            scope<SignInActivity> {
                scoped(override = true) { testRegistry as ActivityResultRegistry }
            }
        }
        loadKoinModules(scopedModule)

        ActivityScenario.launch(SignInActivity::class.java).use { scenario ->
            scenario.onActivity {
            }
            // 認証画面を起動
            onView(withText(R.string.label_sign_in)).perform(click())

            // resultがすぐにディスパッチされている

            onView(withText(startsWith(getString(R.string.error_service_update_canceled))))
                .check(matches(isDisplayed()))
            onView(
                withText(
                    endsWith(
                        getString(
                            R.string.label_error_code,
                            ErrorCodes.PLAY_SERVICES_UPDATE_CANCELLED
                        )
                    )
                )
            )
                .check(matches(isDisplayed()))
        }
    }

    @Test
    fun showError_UNKNOWN() {
        // resultCodeはOK/CANCEL以外ならなんでもOK
        val testRegistry = TestRegistry(Activity.RESULT_FIRST_USER, ErrorCodes.UNKNOWN_ERROR)
        // 追加のモジュールにセット
        val scopedModule = module {
            scope<SignInActivity> {
                scoped(override = true) { testRegistry as ActivityResultRegistry }
            }
        }
        loadKoinModules(scopedModule)

        ActivityScenario.launch(SignInActivity::class.java).use { scenario ->
            scenario.onActivity {
            }
            // 認証画面を起動
            onView(withText(R.string.label_sign_in)).perform(click())

            // resultがすぐにディスパッチされている

            onView(withText(startsWith(getString(R.string.error_unknown))))
                .check(matches(isDisplayed()))
            onView(
                withText(
                    endsWith(
                        getString(
                            R.string.label_error_code,
                            ErrorCodes.UNKNOWN_ERROR
                        )
                    )
                )
            )
                .check(matches(isDisplayed()))
        }
    }
}